fixed text and project spacing

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ F1F4F3 (whiteish)
     .project{
         background-color:#F1F4F3;
         position: relative;
-        margin: 20px auto;
+        margin: 50px auto;
         width: 90%;
     }
     .project-title{
